<resources>
    <string name="app_name">AR_tistic</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="draw">Desssiner</string>
    <string name="profile">Profil</string>
    <string name="map">Carte</string>
    <string name="leaderboard">Classement</string>
    <string name="msg">Messages</string>
    <string name="connectez_vous">Connectez-vous</string>
    <string name="title_activity_leader_board">LeaderBoardActivity</string>
    <string name="canvasContentDescription">Mini Paint is a simple line drawing app.
   Drag your fingers to draw. Rotate the phone to clear.</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>