<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DrawsVisualisation">

    <TextView
        android:id="@+id/drawTitle"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="15dp"
        android:gravity="center"
        android:text="Draws"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"></TextView>

    <ImageView
        android:id="@+id/mainDraw"
        android:layout_width="180dp"
        android:layout_height="180dp"

        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/drawTitle"/>

    <ImageView
        android:id="@+id/rightDraw"
        android:layout_width="150dp"
        android:layout_height="150dp"

        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        app:layout_constraintStart_toEndOf="@+id/mainDraw"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/leftDraw"
        android:layout_width="150dp"
        android:layout_height="150dp"


        android:layout_marginTop="80dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toStartOf="@+id/mainDraw"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/madeBy"
        android:layout_width="345dp"
        android:layout_height="30dp"
        android:layout_marginTop="120dp"
        android:text="Made by : "
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.242"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainDraw" />

    <TextView
        android:id="@+id/comments"
        android:layout_width="345dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:text="Comments"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.242"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/madeBy" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewComments"
        class="androidx.appcompat.app.AlertController$RecycleListView"
        android:layout_width="410dp"
        android:layout_height="123dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comments">

    </androidx.recyclerview.widget.RecyclerView>

    <ImageView
        android:id="@+id/report"
        android:layout_width="73dp"
        android:layout_height="63dp"
        app:layout_constraintBottom_toTopOf="@+id/rightDraw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.997"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/yellow_warning" />

    <ImageView
        android:id="@+id/liked_false"
        android:layout_width="71dp"
        android:layout_height="68dp"
        app:layout_constraintBottom_toTopOf="@+id/madeBy"
        app:layout_constraintEnd_toStartOf="@+id/next"
        app:layout_constraintStart_toEndOf="@+id/previous"
        app:layout_constraintTop_toBottomOf="@+id/mainDraw"
        app:srcCompat="@drawable/empty_heart" />

    <ImageView
        android:id="@+id/liked_true"
        android:layout_width="71dp"
        android:layout_height="68dp"
        app:layout_constraintBottom_toTopOf="@+id/madeBy"
        app:layout_constraintEnd_toStartOf="@+id/next"
        app:layout_constraintStart_toEndOf="@+id/previous"
        app:layout_constraintTop_toBottomOf="@+id/mainDraw"
        app:srcCompat="@drawable/full_heart"
        tools:visibility="gone" />

    <ImageView
        android:id="@+id/addDrawing"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:minWidth="70dp"
        android:minHeight="70dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerViewComments"
        app:srcCompat="@drawable/plus" />

    <ImageView
        android:id="@+id/previous"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="28dp"
        app:layout_constraintBottom_toTopOf="@+id/madeBy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leftDraw"
        app:srcCompat="@drawable/previous" />

    <ImageView
        android:id="@+id/next"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintBottom_toTopOf="@+id/madeBy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rightDraw"
        app:layout_constraintVertical_bias="0.608"
        app:srcCompat="@drawable/next" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shape_left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.99">

        <ImageButton
            android:id="@+id/drawButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_map"
            android:contentDescription="@string/draw"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.099"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/color_palette" />

        <ImageButton
            android:id="@+id/mapButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_map"
            android:contentDescription="@string/map"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.358"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/map" />

        <ImageButton
            android:id="@+id/leaderboardButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_map"
            android:contentDescription="@string/leaderboard"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.626"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ranking" />

        <ImageButton
            android:id="@+id/msgButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_map"
            android:contentDescription="@string/msg"
            android:src="@drawable/massage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.882"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>